# Ndk

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lg/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNITestJava.cpp  NativeText.cpp  compress_image.cpp
app/src/main/java/com/lg/ndk/: CaseActivity.java  MainActivity.kt  PhotoViewActivity.kt
app/src/main/java/com/lg/ndk/listener/: NativeListener.kt
app/src/main/java/com/lg/ndk/util/: CompressImageUtil.java  FileUtil.java  NativeUtil.java  Util.java
app/src/main/res/layout/: activity_auto.xml  activity_main.xml
app/src/test/java/com/lg/ndk/: ExampleUnitTest.kt
autolayout/: build.gradle
autolayout/src/main/java/com/zhy/autolayout/: AutoLayoutActivity.java
gradle/wrapper/: gradle-wrapper.properties
